# pybind_plot

./: .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  embed.cpp  hermetic_python.bzl  plot.cpp  plotter.h  requirements_lock.txt
